# CAP22FA

./: .gitignore  README.md  cv2.py  pipeline.py  pyproject.toml  requirements.txt  research.py  setup.py
archive/: VisualBert.txt  category_counts.csv  category_counts.py  scratch.py
documents/: README.md  RESEARCH.md  research_dump.md
example_data/: 0.png_annotation.json  0.png_question.json  happy-hungry-man-eating-pizza-using-fork-knife-italian-restaurant-hungry-man-eating-pizza-using-fork-knife-italian-174038619-1456486414
src/: download.py  main.py  visualBERT.py
src/models/: Vilt  Vilt.py  VisualBertForMultipleChoice.py  custom_dataloader.py  custom_trainer.py  cv2_.py  cv2copy.py  image_transformer.py  model_training.py  plot_model_results.py  plotting_visual_bert.py  research.py  test_ids.txt  vilt_dataloader.py  visualBERT.py
src/models/logs/: training_log.txt
src/models/results/: Class_Imba_Check.txt
src/models/results/model_weights/: testing_stats.csv
src/models/results/model_weights/visualbert_RUN_1_4epochs/: tokenizer_config.json  training_stats.csv
src/tests/: test_custom_dataloader.py  test_custom_trainer.py  test_custom_training.py  test_load_data.py  test_model_load.py  test_visualbert.py
src/tests/visualbert_demo/: modeling_frcnn.py  processing_image.py  visualbert_demo.py  visualizing_image.py
src/utils/: BaseModel.py  annotation_to_string.py  answer_filtering.py  applying_annotations.py  configs.py  detect.py  keys_of_annotations.py  plotter.py  pre_process.py  prepare_and_download.py  scratch.py  visual_embeddings.py
(+58 files in other folders)
